--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.16.2",
     "contentful": "^9.3.3",
     "next": "^13.1.6",
     "react": "^18.2.0",
